Começando a criação da tela de login

--- a/SPRINT3/Dasboard/html/index.html
+++ b/SPRINT3/Dasboard/html/index.html
@@ -137,7 +137,7 @@
         -->
         <section class="data-box data-box--Atividades-Date">
             <h2 class="data-box__header">
-                Atividades Por Data (Gráfico de Colunas Agrupadas Por tipo de atividade)
+                Atividades por Dia Por tipo de exercicio
             </h2>
             <div class="data-box__body"></div>
         </section>
@@ -151,7 +151,7 @@
 
         <section class="data-box data-box--Alimentacao">
             <h2 class="data-box__header">
-                Alimentação - Executado por Plano (Gráfico linha)(Medido por níveis de calorias)
+                Atividades Executado | Plano
                 <!--
                 Existem várias APIs que podem calcular calorias de uma refeição com base nos ingredientes ou nome do prato. Aqui estão algumas opções:
 
