--- a/SPRINT3/telaRegistros/html/telaRegistros.html
+++ b/SPRINT3/telaRegistros/html/telaRegistros.html
@@ -13,30 +13,20 @@
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
+    <div class="menu-toggle">
+        <i class="fas fa-bars"></i>
+    </div>
     <div class="sidebar">
         <div class="logo">
             <div class="cross"></div>
         </div>
         <div class="menu">
             <ul>
-                <li>
-                    <a href="#" class="tooltip">
-                        <i class="bx bx-home"></i>
-                        <span class="link hide">Página Inicial</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="tooltip">
-                        <i class="fa fa-dumbbell"></i>
-                        <span class="link hide">Atividades Físicas</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="tooltip">
-                        <i class="fa fa-utensils"></i>
-                        <span class="link hide">Alimentação Diária</span>
-                    </a>
-                </li>
+                <li><i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span></li>
+                <li><i class="fas fa-chart-line"></i> <span class="menu-text">Dashboard</span></li>
+                <li><i class="fas fa-clipboard"></i> <span class="menu-text">Registros</span></li>
+                <li><i class="fas fa-apple-alt"></i> <span class="menu-text">Dietas</span></li>
+                <li><i class="fas fa-dumbbell"></i> <span class="menu-text">Treinos</span></li>
             </ul>
         </div>
         <div class="switch">
@@ -99,6 +89,6 @@
         
     </div>
 
-    <script src="../js/index.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
