--- a/SPRINT3/Cadastro/html/cadastro.html
+++ b/SPRINT3/Cadastro/html/cadastro.html
@@ -37,41 +37,43 @@
     <div class="container">
         <div class="registration_area">
             <h2 class="title">Cadastro</h2>
-            <form class="form">
+            <form action="../php/cadastro.php" method="POST" class="form" >
                 <div class="form-group input__name">
                     <i class="fas fa-user"></i>
-                    <input type="text" placeholder="Nome *" required>
+                    <input type="text" name="nome" placeholder="Nome *" required>
                 </div>
                 <div class="form-group input__email">
                     <i class="fas fa-envelope"></i>
-                    <input type="email" placeholder="Email *" required>
+                    <input type="email" name="email" placeholder="Email *" required>
                 </div>
                 <div class="form-group input__password">
                     <i class="fas fa-lock"></i>
-                    <input type="password" placeholder="Senha *" required>
+                    <input type="password" name="senha" placeholder="Senha *" required>
                 </div>
                 <div class="form-group input__date">
                     <i class="fas fa-calendar-alt"></i>
-                    <input type="date" required>
+                    <input type="date" name="data" required>
                 </div>
                 <div class="form-group input__gender">
                     <i class="fas fa-venus-mars"></i>
-                    <select required>
+                    <select name="sexo"required>
                         <option value="">Gênero *</option>
                         <option value="masculino">Masculino</option>
                         <option value="feminino">Feminino</option>
                         <option value="outro">Outro</option>
+                        <option value="prefiro não dizer">Prefiro não dizer</option>
                     </select>
                 </div>
                 <div class="form-group input__height">
                     <i class="fas fa-ruler-vertical"></i>
-                    <input type="number" placeholder="Altura (cm) *" required>
+                    <input type="number" name="altura" placeholder="Altura (m) *" step="0.01" min="0.50" max="2.50" required>
                 </div>
+                
                 <div class="form-group input__weight">
                     <i class="fas fa-weight"></i>
-                    <input type="number" placeholder="Peso (kg) *" required>
+                    <input type="number" name="peso"placeholder="Peso (kg) *" required>
                 </div>
-                <button class="btn">Cadastrar</button>
+                <input type="submit",value="Cadastrar" class="btn">
             </form>
         </div>
     </div>
