--- a/SPRINT3/Login/html/login.html
+++ b/SPRINT3/Login/html/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/login.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="menu-toggle">
@@ -34,7 +35,20 @@
         </div>
     </div>
     <div class="container">
-
+        <div class="registration_area">
+            <h2 class="title">Login</h2>
+            <form action="../php/login.php" method="POST" class="form" >
+                <div class="form-group input__email">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" name="email" placeholder="Email *" required>
+                </div>
+                <div class="form-group input__password">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" name="senha" placeholder="Senha *" required>
+                </div>
+                <input type="submit",value="Logar" class="btn">
+            </form>
+        </div>
     </div>
     <script src="../js/login.js"></script>
 </body>
