--- a/SPRINT3/Tela Inicial/html/TelaInicial.html
+++ b/SPRINT3/Tela Inicial/html/TelaInicial.html
@@ -39,7 +39,7 @@
     <div class="container">
         <div class="imagem">
             <div class="header">
-                <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/health-logo-design-template-413edd6c579e1c7ac61e14ffdd75eec5_screen.jpg?ts=1604410182" 
+                <img src="../img01.webp" 
                      alt="Logo do Site">
             </div>
         </div>
