--- a/SPRINT3/Login/html/login.html
+++ b/SPRINT3/Login/html/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR" data-theme="modern">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../../../../TrabalhoWEB2/SPRINT3/Login/css/login.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="menu-toggle">
@@ -20,22 +21,42 @@
         </div>
         <div class="menu">
             <ul>
-                <li><i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span></li>
-                <li><i class="fas fa-chart-line"></i> <span class="menu-text">Dashboard</span></li>
-                <li><i class="fas fa-clipboard"></i> <span class="menu-text">Registros</span></li>
-                <li><i class="fas fa-apple-alt"></i> <span class="menu-text">Dietas</span></li>
-                <li><i class="fas fa-dumbbell"></i> <span class="menu-text">Treinos</span></li>
+                <li onclick="location.href='../../../Tela Inicial/html/TelaInicial.html'">
+                    <i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span>
+                </li>
+                <li onclick="location.href='#'">
+                    <i class="fas fa-apple-alt"></i> <span class="menu-text">Dietas</span>
+                </li>
+                <li onclick="location.href='#'">
+                    <i class="fas fa-dumbbell"></i> <span class="menu-text">Treinos</span>
+                </li>
             </ul>
         </div>
         <div class="switch">
-            <i class="fas fa-sun"></i>
-            <span class="switch__track"></span>
-            <i class="fas fa-moon"></i>
+          <i class="fas fa-sun"></i>
+          <span class="switch__track"></span>
+          <i class="fas fa-moon"></i>
+      </div>
+      
+    </div>
+
+    <div class="container">
+        <div class="registration_area">
+            <h1 class="title">Login</h1>
+            <form action="../../php/login.php" method="POST" class="form">
+                <div class="form-group input__email">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" name="email" placeholder="Email" required />
+                </div>
+                <div class="form-group input__password">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" name="senha" placeholder="Senha" required />
+                </div>
+                <button type="submit" class="btn">Entrar</button>
+            </form>
         </div>
     </div>
-    <div class="container">
 
-    </div>
     <script src="../js/login.js"></script>
 </body>
 </html>
