--- a/SPRINT3/Tela intermediaria/html/telaLoginCadastro.html
+++ b/SPRINT3/Tela intermediaria/html/telaLoginCadastro.html
@@ -7,16 +7,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 <body>
+    <div class="menu-toggle">
+        <i class="fas fa-bars"></i>
+    </div>
     <div class="sidebar">
         <div class="logo">
             <div class="cross"></div>
         </div>
         <div class="menu">
             <ul>
-                <li><i class="fas fa-home"></i> <span class="menu-text">Início</span></li>
+                <li><i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span></li>
+                <li><i class="fas fa-chart-line"></i> <span class="menu-text">Dashboard</span></li>
+                <li><i class="fas fa-clipboard"></i> <span class="menu-text">Registros</span></li>
+                <li><i class="fas fa-apple-alt"></i> <span class="menu-text">Dietas</span></li>
+                <li><i class="fas fa-dumbbell"></i> <span class="menu-text">Treinos</span></li>
             </ul>
         </div>
-        <div class="switch">    
+        <div class="switch">
             <i class="fas fa-sun"></i>
             <span class="switch__track"></span>
             <i class="fas fa-moon"></i>
