--- a/SPRINT3/telaRegistros/html/telaRegistros.html
+++ b/SPRINT3/telaRegistros/html/telaRegistros.html
@@ -28,10 +28,10 @@
         </div>
         <div class="menu">
             <ul>
-                <li><i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span></li>
+                <li><a href="../../Tela Inicial/html/TelaInicial.html" style="text-decoration: none; color:inherit"><i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span></a></li>
                 <li><a href="../../Dasboard/html/dashboard.html" style="text-decoration: none; color:inherit"><i class="fas fa-chart-line"></i> <span class="menu-text">Dashboard</span></a></li>
-                <li><a href="../../Dasboard/html/dashboard.html" style="text-decoration: none; color:inherit"><i class="fas fa-clipboard"></i> <span class="menu-text">Registros Atividades</span></a></li>
-                <li><a href="../../Dasboard/html/dashboard.html" style="text-decoration: none; color:inherit"><i class="fas fa-apple-alt"></i> <span class="menu-text">Regitros Alimentação</span></a></li>
+                <li><a href="../html/telaRegistros.html" style="text-decoration: none; color:inherit"><i class="fas fa-clipboard"></i> <span class="menu-text">Registros Atividades</span></a></li>
+                <li><a href="../html/registros_alimentacao.html" style="text-decoration: none; color:inherit"><i class="fas fa-apple-alt"></i> <span class="menu-text">Regitros Alimentação</span></a></li>
             </ul>
         </div>
         <div class="switch">
