modificações tela de educação

--- a/SPRINT3/Tela Inicial/html/TelaInicial.html
+++ b/SPRINT3/Tela Inicial/html/TelaInicial.html
@@ -40,14 +40,13 @@
         <div class="profile-icon" onclick="window.location.href='../../Tela Intermediaria/html/telaLoginCadastro.html'">
             <i class="fas fa-user-circle"></i>
         </div>
-                   
+
     </div>
     <div class="container">
         <div class="imagem">
             <div class="header">
 
-                <img src="../img01.webp" 
-                     alt="Logo do Site">
+                <img src="../img01.webp" alt="Logo do Site">
 
             </div>
         </div>
@@ -89,5 +88,3 @@
 </body>
 
 </html>
-
-
